# proteus

./: .coverage  .gitignore  CONTRIBUTING.md  LICENSE  README.md  benchmark_proxy.py  config.yaml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: run_benchmarks.py
demos/: README.md
demos/log-analyzer/: README.md  analyze_logs.py  generate_logs.py  run_demo.py
demos/weather-dashboard/: app.js  index.html  run_proteus_test.py  styles.css  weather-api-response.json  weather-api-reykjavik.json  weather-api-tokyo.json
integrations/: README.md  auto_compress.py  proteus-health-watchdog.sh
src/proteus/: __init__.py  ccr.py  config.py  history.py  profiles.py  router.py
src/proteus/cli/: commands.py
src/proteus/compressors/: code.py  diff.py  json_crusher.py  log_deduper.py  search.py  text.py
src/proteus/proxy/: __init__.py  backends.py  handler.py  inject.py  server.py
test/: benchmark_all.py  run_all.py  test_cli.py  test_coverage.py  test_coverage2.py  test_coverage3.py  test_history.py  test_new.py  test_profiles.py
